# --
# CHANGES - change log of OTRS
# Copyright (C) 2001-2008 OTRS AG, http://otrs.org/
# --
# $Id: CHANGES,v 1.762.2.21 2008-11-07 14:52:34 mh Exp $
# --
# This software comes with ABSOLUTELY NO WARRANTY. For details, see
# the enclosed file COPYING for license information (GPL). If you
# did not receive this file, see http://www.gnu.org/licenses/gpl-2.0.txt.
# --

2.3.4 (2008/??/??)
 - (2008/11/07) Fixed bug# 2730 - Sending mails to M$ Exchange Server 2007
    fails sometimes with "Bad file descriptor!".
 - (2008/11/01) Fixed bug# 3207 - Expanded articles in wrong order.
 - (2008/10/30) Fixed bug# 2071 - Dead link to online documentation in admin
    interface (AdminState).
 - (2008/10/29) Fixed bug# 3244 - "Defination"-Typo in Defaults.pm.
 - (2008/10/29) Fixed bug# 2736 - AdminUser&Subaction=Change - Valid is
    automatically changed
 - (2008/10/29) Fixed bug# 2710 - Error: Module 'Kernel::Modules::' not found!
 - (2008/10/28) Fixed bug# 3402 - AgentLinkObject crashes with "Got no
    UserLanguage" if browser sends exotic language.
 - (2008/10/28) Fixed bug# 3405 - Input field agent-email-address too short.
 - (2008/10/28) Fixed bug# 1719 - psql -u deprecated.
 - (2008/10/28) Fixed bug# 3366 - TicketEvent ArticleFreeTextSet does not know
    ArticleID.
 - (2008/10/28) Fixed bug# 3346 - improved error logging of new postmaster
    tickets for invalid priority names.
 - (2008/10/28) Fixed bug# 3376 - GenericAgent: A warning like "you have to set
    schedule times" would be helpful.
 - (2008/10/20) Fixed bug# 3391 - Filter out hazardous characters from redirects.
 - (2008/10/16) Fixed bug# 2415 - Wrong info after editing salutation.
 - (2008/10/15) Fixed bug# 3379 - Documentation of packages got not shown in
    admin package manager.
 - (2008/10/15) Updated Chinese translation, thanks to Never Min!
 - (2008/10/13) Fixed bug# 3373 - Postmaster match filter is losing [***] on
    second time.